<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="search">Поиск</string>
    <string name="media_library">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark_theme_name">Темная тема</string>
    <string name="share_app_name">Поделиться приложением</string>
    <string name="write_support_name">Написать в поддержку</string>
    <string name="user_agreement_name">Пользовательское соглашение</string>
    <string name="share_app_text">Посмотри курс по Android-разработке в Практикуме:
        https://practicum.yandex.ru/android-developer/</string>
    <string name="support_email">matushkin.leha2018@gmail.com</string>
    <string name="support_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="support_body">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="user_agreement_url">https://yandex.ru/legal/practicum_offer/ru</string>

    <string name="track_1_name">Smells like Teen Spirit</string>
    <string name="track_1_artist">Nirvana</string>
    <string name="track_1_time">5:01</string>

    <string name="track_2_name">Billie Jean</string>
    <string name="track_2_artist">Michael Jackson</string>
    <string name="track_2_time">4:35</string>

    <string name="track_3_name">Stayin\' Alive</string>
    <string name="track_3_artist">Bee Gees</string>
    <string name="track_3_time">4:10</string>

    <string name="track_4_name">Whole Lotta Love</string>
    <string name="track_4_artist">Led Zeppelin</string>
    <string name="track_4_time">5:33</string>

    <string name="track_5_name">Sweet Child O\'Mine</string>
    <string name="track_5_artist">Guns N\' Roses</string>
    <string name="track_5_time">5:03</string>

    <string name="retry">Обновить</string>
    <string name="nothing_found">Ничего не нашлось</string>
    <string name="something_went_wrong">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>

    <string name="you_searched">Вы искали</string>
    <string name="clear_history">Очистить историю</string>

    <string name="duration">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>

    <string name="track_time_default">00:00</string>

    <string name="favorite_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="empty_message_favorites">Ваша медиатека пуста</string>
    <string name="empty_message_playlist">Вы не создали\nни одного плейлиста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="tabs_description">Вкладки для переключения между плейлистами и избранными треками</string>

    <string name="name">Название*</string>
    <string name="description">Описание</string>
    <string name="create">Создать</string>
    <string name="playlist_name">Название плейлиста</string>
    <string name="tracks_count">0 треков</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="finish_create_pl">Завершить создание плейлиста?</string>
    <string name="finish_create_pl_msg">Все несохраненные данные будут потеряны</string>
    <string name="cancel">Отмена</string>
    <string name="finish">Завершить</string>
    <string name="playlist_created">Плейлист %s создан</string>
    <string name="added_to_playlist">Добавлено в плейлист %s</string>
    <string name="already_in_playlist">Трек уже добавлен в плейлист %s</string>

    <plurals name="playlist_duration_minutes">
        <item quantity="one">%d минута</item>
        <item quantity="few">%d минуты</item>
        <item quantity="many">%d минут</item>
        <item quantity="other">%d минут</item>
    </plurals>

    <plurals name="track_count">
        <item quantity="one">%d трек</item>
        <item quantity="few">%d трека</item>
        <item quantity="many">%d треков</item>
        <item quantity="other">%d треков</item>
    </plurals>

    <string name="tracks_count_text">Количество треков</string>
    <string name="share">Поделиться</string>
    <string name="delete_track_title">Хотите удалить трек?</string>
    <string name="delete_track_message"></string>
    <string name="no">НЕТ</string>
    <string name="yes">ДА</string>
    <string name="share_playlist_empty">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="edit_info">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="delete_playlist_title">Удалить плейлист</string>
    <string name="delete_playlist_message">Хотите удалить плейлист\n«%s»?</string>
    <string name="delete_mes">Удалить</string>
    <string name="empty_playlist_mes">В этом плейлисте нет треков</string>
    <string name="save">Сохранить</string>
    <string name="playlist_saved">Плейлист сохранён</string>
    <string name="edit_playlist">Редактировать</string>
</resources>
