<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/back_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            app:icon="@drawable/arrow_back_icon"
            app:iconGravity="textStart"
            app:iconTint="@color/black"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:backgroundTint="@android:color/transparent"
            android:foreground="?attr/selectableItemBackgroundBorderless"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:text="@string/third_button_name"
            android:textSize="22sp"
            android:textColor="@color/black_main"
            android:textAllCaps="false"
            android:textStyle="bold"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="21dp"
        android:paddingBottom="21dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_weight="1.5"
            android:text="@string/dark_theme_name"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:textAllCaps="false" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/share_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="21dp"
        android:paddingBottom="21dp"
        android:background="?selectableItemBackground"
        android:clickable="true"
        android:focusable="true">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_weight="1.5"
            android:text="@string/share_app_name"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:textAllCaps="false" />

        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            app:icon="@drawable/share_icon"
            app:iconTint="@color/gray"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:backgroundTint="@android:color/transparent"
            android:foreground="?attr/selectableItemBackgroundBorderless"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="21dp"
        android:paddingBottom="21dp"
        android:background="?selectableItemBackground"
        android:clickable="true"
        android:focusable="true">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_weight="1.5"
            android:text="@string/write_support_name"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:textAllCaps="false" />

        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            app:icon="@drawable/support_icon"
            app:iconTint="@color/gray"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:backgroundTint="@android:color/transparent"
            android:foreground="?attr/selectableItemBackgroundBorderless"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="?selectableItemBackground"
        android:paddingTop="21dp"
        android:paddingBottom="21dp"
        android:clickable="true"
        android:focusable="true">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_weight="1.5"
            android:text="@string/user_agreement_name"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:textAllCaps="false" />

        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            app:icon="@drawable/arrow_forward_icon"
            app:iconTint="@color/gray"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:backgroundTint="@android:color/transparent"
            android:foreground="?attr/selectableItemBackgroundBorderless"/>

    </LinearLayout>


</LinearLayout>
